Fixed css styling to align all months regardless the size of the screen.

--- a/app/ui/css/style.css
+++ b/app/ui/css/style.css
@@ -159,7 +159,25 @@ div.home {
     width: 100%;
   }
 }
+@media (min-width: 481px) and (max-width: 767px) {
+  .sec-month:nth-of-type(2n+1) {
+    clear: left;
+  }
+}
+@media (min-width: 768px) and (max-width: 990px) {
+  .sec-month:nth-of-type(3n+1) {
+    clear: left;
+  }
+}
+@media screen and (min-width: 991px) {
+  .sec-month:nth-of-type(4n+1) {
+    clear: left;
+  }
+}
 
 .sec-year {
   margin-top: 0;
+}
+
+.sec-month {
 }
